terraform/modules/kubernetes-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: clusterissuer
spec:
  rules:
    - host: ecommerce1-auth.prototyping.quest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zitadel-service
                port:
                  number: 8080
  tls:
    - secretName: zitadel-cert
      hosts:
        - ecommerce1-auth.prototyping.quest
